[gd_scene load_steps=2 format=3 uid="uid://ageup001"]

[ext_resource type="Script" path="res://scripts/ui/age_up_dialog.gd" id="1"]

[node name="AgeUpDialog" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -180.0
offset_right = 200.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
custom_minimum_size = Vector2(400, 320)
script = ExtResource("1")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_bottom = 16

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="AgeUpTitle" type="Label" parent="Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Advance to Feudal Age"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 22

[node name="CostLabel" type="Label" parent="Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Cost: 400 Food, 200 Gold"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 16

[node name="LandmarkContainer" type="VBoxContainer" parent="Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 8

[node name="LandmarkLabel" type="Label" parent="Margin/VBox/LandmarkContainer"]
layout_mode = 2
text = "Choose a Landmark:"
theme_override_font_sizes/font_size = 16

[node name="LandmarkOptionA" type="Button" parent="Margin/VBox/LandmarkContainer"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 60)
text = "Fortress of the Kings
Defensive landmark. Attacks nearby enemies."
theme_override_font_sizes/font_size = 14

[node name="LandmarkOptionB" type="Button" parent="Margin/VBox/LandmarkContainer"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 60)
text = "Grand Market
Economic landmark. Boosts gold income."
theme_override_font_sizes/font_size = 14

[node name="AgeUpProgress" type="ProgressBar" parent="Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 24)
max_value = 100.0
value = 0.0
show_percentage = true

[node name="ButtonRow" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 16

[node name="CancelButton" type="Button" parent="Margin/VBox/ButtonRow"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(120, 48)
text = "Cancel"
theme_override_font_sizes/font_size = 16

[node name="ConfirmButton" type="Button" parent="Margin/VBox/ButtonRow"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(120, 48)
text = "Confirm"
theme_override_font_sizes/font_size = 16
